fix: hides horizontal scrollbar on subject detail page / user detail page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,7 @@ body {
 
 body {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 html, body {
